--- a/app/src/main/res/layout/activity_text_mod.xml
+++ b/app/src/main/res/layout/activity_text_mod.xml
@@ -34,7 +34,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/userInput"
+            android:id="@+id/editText"
             android:layout_weight="1"
             android:textSize="@dimen/edittext_font_size"
             android:singleLine="true"
