--- a/app/src/main/res/layout/activity_text_mod.xml
+++ b/app/src/main/res/layout/activity_text_mod.xml
@@ -49,7 +49,8 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:clickable="false" />
 
 
     <LinearLayout
@@ -108,10 +109,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reverse_button_text"
-            android:id="@+id/button4"
+            android:id="@+id/buttonReverse"
             android:textSize="@dimen/button_font_size"
             android:textColor="@color/button_text_color"
-            android:background="@color/button_color" />
+            android:background="@color/button_color"
+            android:clickable="true" />
 
         <Space
             android:layout_width="0sp"
