--- a/app/src/main/res/layout/activity_text_mod.xml
+++ b/app/src/main/res/layout/activity_text_mod.xml
@@ -138,7 +138,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Punctuation"
+            android:text="No Punc"
             android:id="@+id/buttonNoPunctuation"
             android:textSize="@dimen/button_font_size"
             android:textColor="@color/button_text_color"
@@ -148,6 +148,15 @@
             android:layout_width="0sp"
             android:layout_height="match_parent"
             android:layout_weight="1"  />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Space"
+            android:id="@+id/noSpace"
+            android:textSize="@dimen/button_font_size"
+            android:textColor="@color/button_text_color"
+            android:background="@color/button_color" />
     </LinearLayout>
 
     <Space
